Reader: Fix timestamp wrapping in FF (#10165)

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -256,11 +256,11 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 }
 
 .reader-post-card__tag {
+	flex: 1 0 0;
 	margin-left: 10px;
 	overflow: hidden;
 	position: relative;
 	height: 20px;
-	width: 100%;
 
 	&::after {
 		@include long-content-fade( $size: 10% );
